Removed `HttpClientOptions`.